k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  labels:
    app: url-shortener
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30070
    protocol: TCP
    name: http
  selector:
    app: url-shortener
